Differentiate functional by services, improve tests.
Tests without file dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ zip.writetofile=false
 
 key.size=4096
 
-key.certificate.name=main.cert
+key.certificate.name=main.crt
 key.certificate.type=X.509
 key.certificate.cn=Unknown
 key.certificate.validity.days=365
