Accumulate list of protected objects without deleting and few tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ key.password=654321
 key.pair.generator.type=RSA
 
 key.alg.name=SHA512withRSA
+
+servers.source1=http://localhost:8083/test/api/protected-objects
+servers.source2=http://localhost:8084/test/api/protected-objects
+servers.source3=http://localhost:8085/test/api/protected-objects
