--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,20 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath "com.adarshr:gradle-test-logger-plugin:1.6.0"
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: "com.adarshr.test-logger"
 
 group = 'ru.rtksoftlabs'
 version = '0.0.1-SNAPSHOT'
