Add spring dev tools

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ key.password=654321
 key.pair.generator.type=RSA
 
 key.alg.name=SHA512withRSA
+
+server.port = 8090
+
+spring.jackson.serialization.write-empty-json-arrays=false
