Improve fetch and accumulate mechanism

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -20,6 +20,20 @@ key.pair.generator.type=RSA
 
 key.alg.name=SHA512withRSA
 
-servers.source1=http://localhost:8083/test/api/protected-objects
-servers.source2=http://localhost:8084/test/api/protected-objects
-servers.source3=http://localhost:8085/test/api/protected-objects
+server.port = 8090
+
+spring.jackson.serialization.write-empty-json-arrays=false
+spring.jackson.default-property-inclusion = NON_NULL
+
+webclient.connection.timeout.millis=1000
+webclient.read.timeout.sec=5
+
+servers.source1=http://localhost:8191/api/protected-objects
+servers.source2=http://localhost:8192/api/protected-objects
+servers.source3=http://localhost:8193/api/protected-objects
+servers.source4=http://localhost:8194/api2/protected-objects
+servers.source5=http://localhost:8195/api/protected-objects
+servers.source6=http://localhost:8196/api/protected-objects
+servers.source7=http://localhost:8197/api/protected-objects
+servers.source8=http://localhost:8198/api/protected-objects
+servers.source9=http://192.168.24.1:500/api/protected-objects
