Fix name issues for timeout variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,8 +25,8 @@ server.port = 8090
 spring.jackson.serialization.write-empty-json-arrays=false
 spring.jackson.default-property-inclusion = NON_NULL
 
-webclient.connection.timeout.millis=1000
-webclient.read.timeout.sec=5
+webclient.connection.timeout=1000
+webclient.read.timeout=5000
 
 servers.source1=http://localhost:8191/api/protected-objects
 servers.source2=http://localhost:8192/api/protected-objects
