--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,7 @@ key.alg.name=SHA512withRSA
 
 server.port = 8090
 
-spring.jackson.serialization.write-empty-json-arrays=false
-spring.jackson.default-property-inclusion = NON_NULL
+spring.jackson.default-property-inclusion=NON_EMPTY
 
 webclient.connection.timeout=1000
 webclient.read.timeout=5000
