--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -35,4 +35,4 @@ servers.source5=http://localhost:8195/api/protected-objects
 servers.source6=http://localhost:8196/api/protected-objects
 servers.source7=http://localhost:8197/api/protected-objects
 servers.source8=http://localhost:8198/api/protected-objects
-servers.source9=http://192.168.24.1:500/api/protected-objects
+servers.unavailable=http://192.168.24.1:500/api/protected-objects
