--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ buildscript {
     }
 }
 
+plugins {
+    id "org.sonarqube" version "2.6"
+    id 'jacoco'
+}
+
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
