--- a/rtk-frontend/package.json
+++ b/rtk-frontend/package.json
@@ -23,6 +23,7 @@
     "angular-tree-component": "^8.3.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -32,9 +33,10 @@
     "@angular/cli": "~7.2.2",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
+    "@types/file-saver": "^2.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
