Make tests work

--- a/rtk-frontend/angular.json
+++ b/rtk-frontend/angular.json
@@ -62,7 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "rtk-frontend:build"
+            "browserTarget": "rtk-frontend:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
