Add blocking request to sources and corresponding ui behavior

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,8 @@ spring.jackson.default-property-inclusion=NON_EMPTY
 
 webclient.connection.timeout=1000
 webclient.read.timeout=5000
+webclient.read.mono.timeout=5000
+webclient.read.mono.block.timeout=5000
 
 servers.source1=http://localhost:8191/api/protected-objects
 servers.source2=http://localhost:8192/api/protected-objects
