--- a/rtk-frontend/package.json
+++ b/rtk-frontend/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.1",
+    "ng-block-ui": "^2.1.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
