--- a/rtk-frontend/package.json
+++ b/rtk-frontend/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.5.4",
     "file-saver": "^2.0.1",
     "ng-block-ui": "^2.1.3",
+    "ngx-modal-dialog": "^3.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
